<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_principal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.fabricio.laboratorio05.PrincipalActivity">

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ufsSpinner"
        android:layout_alignParentStart="true"
        android:orientation="horizontal"
        android:gravity="center_horizontal" />

    <RadioButton
        android:text="@string/fem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/radioGroup"
        android:id="@+id/radioButton2" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioButton"
        android:layout_centerHorizontal="true">

        <ToggleButton
            android:text="ToggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/toggleButton"
            android:layout_weight="1"
            android:textOff="@string/nao"
            android:textOn="@string/sim" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/atualiza_auto" />
    </LinearLayout>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/email"
        android:ems="10"
        android:id="@+id/emailEditText"
        android:hint="@string/email"
        android:layout_below="@+id/nomeEditText"
        android:layout_marginTop="33dp"
        android:layout_alignStart="@+id/nomeEditText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/idade"
        android:ems="10"
        android:id="@+id/idadeEditText"
        android:hint="@string/idade"
        android:layout_below="@+id/emailEditText"
        android:layout_alignStart="@+id/emailEditText"
        android:layout_marginTop="22dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="Name"
        android:ems="10"
        android:id="@+id/nomeEditText"
        android:hint="@string/nome"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp" />

    <CheckBox
        android:text="@string/aceito"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkBox"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <RadioButton
        android:text="@string/masc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioButton"
        android:layout_below="@+id/radioButton2"
        android:layout_alignEnd="@+id/radioButton2" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ufsSpinner"
        android:entries="@array/array_ufs"
        android:layout_above="@+id/radioButton2"
        android:layout_alignParentStart="true" />
</RelativeLayout>
